# contracts

./: .gitignore  Cargo.toml  DEPLOYMENT_CMD.md  IMPLEMENTATION_PLAN copy.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY_REVIEW.md
contracts/adl_handler/src/: lib.rs
contracts/adl_handler/test_snapshots/tests/: e2e_adl_executes_when_pnl_factor_exceeds_threshold.1.json  e2e_adl_not_required_when_position_unprofitable.1.json  e2e_adl_requires_adl_keeper_role.1.json  e2e_adl_reverts_when_pnl_factor_below_threshold.1.json
contracts/data_store/src/: lib.rs
contracts/deposit_handler/src/: lib.rs
contracts/deposit_handler/test_snapshots/tests/: deposit_list_reflects_full_lifecycle.1.json
contracts/deposit_vault/src/: lib.rs
contracts/exchange_router/src/: lib.rs
contracts/exchange_router/test_snapshots/tests/: e2e_client_liquidation_healthy_reverts.1.json  e2e_client_liquidation_underwater_succeeds.1.json  e2e_deposit_trade_withdraw_pool_accounting.1.json  e2e_multicall_send_tokens_then_create_order_succeeds.1.json
contracts/fee_batch_sweeper/src/: lib.rs
contracts/fee_handler/: Cargo.toml
contracts/fee_handler/src/: lib.rs
contracts/fee_handler/test_snapshots/tests/: accrue_ui_fee_accumulates_correctly.1.json  accrue_ui_fee_non_controller_reverts.1.json  claim_fees_returns_zero_when_nothing_to_claim.1.json  claim_ui_fees_transfers_and_zeroes_balance.1.json  claim_ui_fees_wrong_receiver_reverts.1.json  set_ui_fee_factor_exceeds_bound_reverts.1.json  set_ui_fee_factor_non_admin_reverts.1.json  set_ui_fee_factor_stores_and_retrieves.1.json
contracts/insurance_fund_router/: IMPLEMENTATION.md  MIGRATION.md  README13.md  README27.md  README8.md  TODO.md  WIRING.md
contracts/liquidation_handler/src/: lib.rs
contracts/liquidation_handler/test_snapshots/tests/: liquidate_healthy_long_reverts.1.json  liquidate_healthy_short_reverts.1.json  (+3 more)
contracts/market_factory/src/: lib.rs
contracts/market_token/src/: lib.rs
contracts/market_util_reader/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/order_handler/benches/: order_execution.rs
contracts/order_handler/src/: lib.rs
contracts/order_vault/src/: lib.rs
contracts/reader/: Cargo.toml
contracts/reader/src/: lib.rs
contracts/reader/test_snapshots/tests/: protocol_stats_empty_markets_returns_zeros.1.json  protocol_stats_single_market_aggregates.1.json  protocol_stats_too_many_markets_panics.1.json  protocol_stats_two_markets_sum.1.json  protocol_stats_zero_pool_market_contributes_nothing.1.json
contracts/referral_storage/src/: lib.rs
contracts/role_store/src/: lib.rs
contracts/withdrawal_handler/src/: lib.rs
contracts/withdrawal_vault/src/: lib.rs
docs/: CONTRIBUTING.md  PROJECT_CLEANUP.md  auth-audit.md  deployment.md  oracle-risk.md  oracle.md  price-impact.md  ttl-strategy.md
libs/decrease_position_utils/src/: lib.rs
libs/increase_position_utils/src/: lib.rs
libs/keys/src/: lib.rs
libs/market_utils/: Cargo.toml
libs/market_utils/src/: lib.rs
libs/market_utils/test_snapshots/tests/: funding_magnitude_change_no_event.1.json  funding_sign_flip_emits_event.1.json
libs/math/src/: lib.rs
libs/position_utils/src/: lib.rs
libs/pricing_utils/src/: lib.rs
libs/swap_utils/src/: lib.rs
libs/types/src/: lib.rs
mx/: deploy.mk  test.mk  tokens.mk
scripts/: compute_key.py  create_market.sh  deploy.sh  smoke_test.sh
tests/: Cargo.toml  lifecycle_long.rs
(+30 files in other folders)
