[package]
name = "gmx-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
gmx-types = { path = "../libs/types" }
gmx-keys = { path = "../libs/keys" }
gmx-math = { path = "../libs/math" }

# Contracts
data-store = { path = "../contracts/data_store" }
role-store = { path = "../contracts/role_store" }
oracle = { path = "../contracts/oracle" }
order-handler = { path = "../contracts/order_handler" }
order-vault = { path = "../contracts/order_vault" }
deposit-vault = { path = "../contracts/deposit_vault" }
liquidation-handler = { path = "../contracts/liquidation_handler" }
adl-handler = { path = "../contracts/adl_handler" }
fee-handler = { path = "../contracts/fee_handler" }
market-token = { path = "../contracts/market_token" }

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name = "stop_loss"
path = "stop_loss.rs"

[[test]]
name = "oi_cap"
path = "oi_cap.rs"

[[test]]
name = "role_access_control"
path = "role_access_control.rs"

[[test]]
name = "take_profit"
path = "take_profit.rs"
