[package]
name = "fee-handler"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk  = { workspace = true }
gmx-types    = { path = "../../libs/types" }
gmx-keys     = { path = "../../libs/keys" }
gmx-math     = { path = "../../libs/math" }

[dev-dependencies]
soroban-sdk  = { workspace = true, features = ["testutils"] }
gmx-math     = { path = "../../libs/math" }
role-store   = { path = "../role_store" }
data-store   = { path = "../data_store" }
market-token = { path = "../market_token" }
